# TranslateCore

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.test  LICENSE  PRODUCTION_READY_CHECKLIST.md  PROJECT_STRUCTURE.md  README.md  code_translation_demo.py  docker-compose.yml  docker-translate-cli.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  simple_test.py  test_code.py  test_full_translatecore.py  test_russian_code.py  test_translatecore_complete.py  translate-cli.py
.github/workflows/: ci.yml
docs/: API_CONFIG_GUIDE.md  ARGOS_VS_LIBRETRANSLATE.md  AUTO_DOWNLOAD_GUIDE.md  CLI_FEATURES_SUMMARY.md  CLI_USER_GUIDE.md  DOCKER_GUIDE.md  GETTING_STARTED.md  INTEGRATION_SUMMARY.md  OFFLINE_TRANSLATION_GUIDE.md  OVERVIEW.md  PROJECT_STRUCTURE.md  QUICK_TRANSLATION_GUIDE.md  TRANSLATION_README.md  TRANSLATION_SERVICES_GUIDE.md  test-report.md
examples/: basic_usage.py
scripts/: docker-run.sh  install-cli.sh
src/translatecore/: __init__.py  cli.py  code_translator.py  config_loader.py  enhanced_translator.py  offline_translator.py  smart_code_translator.py
tests/: __init__.py  full_pipeline_test.py  simple_translation_test.py  test_config_demo.py  test_offline_demo.py  test_replacement.py  test_translation_pipeline.py  translation_demo.py  translation_services_test.py
